# gurl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
bench/: compare.sh  sites.sh
crates/gurl-cli/: Cargo.toml
crates/gurl-cli/src/: commands.rs  main.rs
crates/gurl-core/: Cargo.toml
crates/gurl-core/src/: lib.rs
crates/gurl-core/src/client/: mod.rs  request.rs  response.rs  timing.rs
crates/gurl-core/src/output/: envelope.rs
crates/markitdown-rs/: Cargo.toml
crates/markitdown-rs/src/: converter.rs  detection.rs  lib.rs
crates/markitdown-rs/src/converters/: csv.rs  docx.rs  epub.rs  html.rs  image.rs  ipynb.rs  mod.rs  outlook_msg.rs  pdf.rs  plain_text.rs  pptx.rs  rss.rs  wikipedia.rs  xlsx.rs  zip.rs
crates/markitdown-rs/src/utils/: table.rs
specs/: PROGRESS.md  ROADMAP.md
specs/001-init/: spec.md
specs/002-scaffolding/: spec.md
specs/003-http-client/: spec.md
specs/004-html-to-markdown/: spec.md
specs/004-markitdown-rs/: spec.md
specs/005-content-detection/: spec.md
specs/006-cli/: spec.md
specs/007-resilience/: spec.md
specs/008-mcp-server/: spec.md
specs/009-pdf-extraction/: spec.md
specs/010-streaming/: spec.md
specs/011-response-diffing/: spec.md
specs/012-workflow-engine/: spec.md
specs/013-schema-validation/: spec.md
specs/014-watch-monitor/: spec.md
specs/015-cloud-tier/: spec.md
specs/016-distribution/: spec.md
