[package]
name = "gurl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for gurl: the HTTP runtime for AI agents"

[[bin]]
name = "gurl"
path = "src/main.rs"

[dependencies]
gurl-core = { path = "../gurl-core" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
url.workspace = true
