[package]
name = "gurl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for gurl: HTTP client, content intelligence, structured output"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
url.workspace = true
markitdown-rs = { path = "../markitdown-rs", features = ["all"] }
